--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kysely</title>
+    <title>Kysely</title><!--Koodi vaihtaa titlen-->
   </head>
   <body>
     <div class='container'>
