paatelmiin värit, copyright-teksti lisatty

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <h3 id="tulosteksti"></h3>
           <p id='paatelmateksti'></p>
         </div>
+        <small>&copy; Innowise 2025</small>
         </div>
     <script src="jquery-3.7.1.min.js"></script>
     <script defer src="index.js"></script>
